--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@reach/tabs": "^0.11.2",
     "@reach/visually-hidden": "^0.11.1",
     "gatsby": "^2.24.53",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.34",
+    "gatsby-source-filesystem": "^2.3.29",
+    "gatsby-transformer-sharp": "^2.5.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
